--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+app-root {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
